--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,4 @@ jobs:
       run: |
         python -m flake8 backend/
         cd backend/
-        python manage.py testЫ
+        python manage.py test
